优化和bug修复